[tool.poetry]
name = "poetry-issue"
version = "0.1.0"
description = ""
authors = ["Ethan Brooks <ethanabrooks@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_issue"}]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sample_shscript = { reference = "script-files/sample_script.sh", type= "file" }
